testdata/parser/negative/6.txt
Parse error at 6.pdl:6:26: Declared variable clash
composite main(in a, out a) {
                         ^
